# zombie_nomnom

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  data.json  makefile  pull_request_template.md  pyproject.toml  requirements-dev.txt
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  devops_request.md  documentation-request.md  security-issue.md
.github/workflows/: bandit.yml  deploy-docs.yaml  label.yml  pr-validator.yml  python-publish.yml  scanner.yml  test-coverage.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09aa78ec5a87654f___init___py.html  z_09aa78ec5a87654f___main___py.html  z_09aa78ec5a87654f_cli_py.html  z_09aa78ec5a87654f_engine_py.html  z_491897c0c614153c___init___py.html  z_491897c0c614153c_app_py.html  z_491897c0c614153c_cli_py.html  z_491897c0c614153c_engine_py.html  z_a379b2da98a8fe13_bag_py.html  z_a379b2da98a8fe13_dice_py.html  z_da72d330aaf72201___init___py.html  z_da72d330aaf72201_commands_py.html  z_da72d330aaf72201_game_py.html  z_da72d330aaf72201_models_py.html  z_da72d330aaf72201_serialization_py.html  z_fbb1e067e0e2bf05___init___py.html  z_fbb1e067e0e2bf05_bag_py.html  z_fbb1e067e0e2bf05_dice_py.html
zombie_dice/: __main__.py  cli.py  engine.py
zombie_dice/models/: bag.py
zombie_nomnom/: __init__.py  app.py  cli.py  engine.py
zombie_nomnom/cli/: __init__.py  edit.py  main.py  play.py  utils.py
zombie_nomnom/engine/: commands.py  game.py  models.py  serialization.py
zombie_nomnom/models/: bag.py  dice.py
(+9 files in other folders)
